Update all project files

--- a/about.html
+++ b/about.html
@@ -4,12 +4,13 @@
   <title>Nur A'in Safieya 225561# Individual Project</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   <link rel="stylesheet" href="style.css">
+  <!--to make page responsive-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <header>
     <a href="#" class="logo">Nur A'in Safieya</a>
-
+    
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html" class="active">About Me</a>
@@ -20,18 +21,15 @@
     </nav>
   </header>
 
-
   <!--Section:About Me-->
   <section id="about" class="about">
-    <div class="container">
+    <div class="about-container">
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
-            <div class="about-image">
-                <div class="about-img"></div>
-            </div>
+        
             <div class="about-text">
                 <h3>Who am I?</h3>
-                <div class="summary">
+                <div style="text-align: justify;">
                   <p>Hello! I’m A’in — a creative and dedicated individual with a strong passion for web development, UI design, and personal growth. I aim to craft meaningful user experiences through thoughtful layout, design, and interaction.</p>
                   <p>I enjoy learning new technologies and challenging myself with new projects. My core values include integrity, adaptability, and continuous improvement in everything I pursue.</p>
                   <p>I believe in connecting with people, sharing knowledge, and contributing to communities that inspire growth and creativity.</p>
@@ -69,7 +67,7 @@
                         <div class="ambition">
                           <section class="boxes-section">
                             <div class="box">
-                              <img class="image-hobby" alt="hobby1" src="img/IMAGE-4.jpg">
+                               <img class="image-hobby" alt="hobby1" src="img/IMAGE-4.jpg">
                             </div>
                             <div class="box">
                               <img class="image-hobby" alt="hobby2" src="img/IMAGE-5.jpg">
