--- a/edubackground.html
+++ b/edubackground.html
@@ -61,11 +61,11 @@
             <h4>🕒 2011 - 2016</h4>
             <p><b>✨ SEKOLAH KEBANGSAAN SEKSYEN 7, BANDAR BARU BANGI</b></p>
             <div class="school-gallery">
-              <img src="img/IMAGE-21.jpg" alt="SKS7" />
+              <img style="object-fit:contain" src="img/IMAGE-21.jpg" alt="SKS7" />
               <img src="img/IMAGE-16.jpg" alt="SKS7" />
               <img src="img/IMAGE-17.jpg" alt="SKS7" />
             </div>
-            <p>👉 <a href="https://sks7bbb.blogspot.com/p/blog-page_51.html" target="_blank">Click here to know more about SKS7!</a></p>
+            <p><a href="https://sks7bbb.blogspot.com/p/blog-page_51.html" target="_blank">👉 Click here to know more about SKS7!</a></p>
           </div>
 
           <!-- SCHOOL 2 -->
@@ -73,11 +73,11 @@
             <h4>🕒 2017 - 2021</h4>
             <p><b>✨ SEKOLAH MENENGAH KEBANGSAAN JALAN REKO, KAJANG</b></p>
             <div class="school-gallery">
-              <img src="img/IMAGE-19.png" alt="SMKJR" />
+              <img style="object-fit:contain" src="img/IMAGE-19.png" alt="SMKJR" />
               <img src="img/IMAGE-18.jpg" alt="SMKJR" />
               <img src="img/IMAGE-20.jpg" alt="SMKJR" />
             </div>
-            <p>👉 <a href="https://kejorareko.blogspot.com/" target="_blank">Click here to know more about SMKJR!</a></p>
+            <p> <a href="https://kejorareko.blogspot.com/" target="_blank">👉 Click here to know more about SMKJR!</a></p>
           </div>
 
            <!-- SCHOOL 3 -->
@@ -85,11 +85,11 @@
             <h4>🕒 2022-2023</h4>
             <p><b>✨ UNIVERSITI TEKNOLOGI MARA, KAMPUS DENGKIL</b></p>
             <div class="school-gallery">
-              <img src="img/IMAGE-23.jpg" alt="uitm" />
+              <img style="object-fit:fill" src="img/IMAGE-23.jpg" alt="uitm" />
               <img src="img/IMAGE-22.jpg" alt="uitm" />
               <img src="img/IMAGE-24.jpg" alt="uitm" />
             </div>
-            <p>👉 <a href="https://asasi.uitm.edu.my/" target="_blank">Click here to know more about UiTM Dengkil!</a></p>
+            <p><a href="https://asasi.uitm.edu.my/" target="_blank">👉 Click here to know more about UiTM Dengkil!</a></p>
           </div>
 
           <!-- SCHOOL 4 -->
@@ -97,11 +97,11 @@
             <h4>🕒 2023-2027</h4>
             <p><b>✨ UNIVERSITI PUTRA MALAYSIA, SERDANG</b></p>
             <div class="school-gallery">
-              <img src="img/IMAGE-25.jpg" alt="SMKJR" />
+              <img  src="img/IMAGE-25.jpg" alt="SMKJR" />
               <img src="img/IMAGE-26.png" alt="SMKJR" />
               <img src="img/IMAGE-27.jpg" alt="SMKJR" />
             </div>
-            <p>👉 <a href="https://www.upm.edu.my/" target="_blank">Click here to know more about UPM!</a></p>
+            <p> <a href="https://www.upm.edu.my/" target="_blank">👉 Click here to know more about UPM!</a></p>
           </div>
 
         </div>
