--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
   <!--Section:Home-->
   <section id="home" class="home">
     <div class="home-img">
-      <img src="img/GAMBAR_FORMAL.png">
+      <a href="about.html"><img src="img/GAMBAR_FORMAL.png"></a>
     </div>
     <div class="home-content">
       <h1>Hi, it's <span>A'in</span></h1>
       <h3 class="typing-text">I'm a <span></span></h3>
-      <p>Lorem ipsummmmmmmmmmmmm</p>
+      <p>"Simplicity is the soul of efficiency." — Austin Freeman</p>
       <div class="social-icons">
         <a href="https://www.linkedin.com/in/ainsafieya/"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://www.facebook.com/nurain.safieya"><i class="fa-brands fa-facebook"></i></a>
@@ -37,76 +37,5 @@
     </div>
   </section>
 
-  <!--Section:About Me
-  <section id="about" class="about">
-    <div class="container">
-        <h2 class="section-title">About Me</h2>
-        <div class="about-content">
-            <div class="about-image">
-                <div class="about-img"></div>
-            </div>
-            <div class="about-text">
-                <h3>Who am I?</h3>
-                <div class="summary">
-                  <p>Hello! I’m A’in — a creative and dedicated individual with a strong passion for web development, UI design, and personal growth. I aim to craft meaningful user experiences through thoughtful layout, design, and interaction.</p>
-                  <p>I enjoy learning new technologies and challenging myself with new projects. My core values include integrity, adaptability, and continuous improvement in everything I pursue.</p>
-                  <p>I believe in connecting with people, sharing knowledge, and contributing to communities that inspire growth and creativity.</p>
-                </div>
-                <div class="personal-info">
-                    <div class="info-item">
-                        <span class="info-title">Name:</span>
-                        <span class="info-value">Nur A'in Safieya</span>
-                    </div>
-                    <div class="info-item">
-                        <span class="info-title">Email:</span>
-                        <span class="info-value">jkl0vain@example.com</span>
-                    </div>
-                    <div class="info-item">
-                        <span class="info-title">Location:</span>
-                        <span class="info-value">Selangor, Malaysia</span>
-                    </div>
-                    <div class="info-item">
-                        <span class="info-title">Status:</span>
-                        <span class="info-value">Full-time Student</span>
-                    </div>
-                    <div class="info-item">
-                      <span class="info-title">Ambitions:</span>
-                      <span class="info-value">
-                        <ol class="goals">
-                          <li>Full-Stack Developer</li>
-                          <li>Businesswoman</li>
-                          <li>Cafe Owner</li>
-                        </ol>
-                      </span>
-                    </div>
-                    <div class="info-item">
-                      <span class="info-title">Hobbies:</span>
-                      <span class="info-value">
-                        <div class="ambition">
-                          <section class="boxes-section">
-                            <div class="box">
-                              <img class="image-hobby" alt="hobby1" src="img/IMAGE-4.jpg">
-                            </div>
-                            <div class="box">
-                              <img class="image-hobby" alt="hobby2" src="img/IMAGE-5.jpg">
-                            </div>
-                            <div class="box">
-                              <img class="image-hobby" alt="hobby3" src="img/IMAGE-6.jpg">
-                            </div>
-                          </section>
-                        </div>
-                      </span>
-                    </div>
-              
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
--->
-<!--Section:Future Plans-->
-<section id="future-plan" class="future-plan">
- 
-</section>
 </body>
 </html>
